// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

03/13/2010
	r245 [Jobbie]
	* Fixed an issue where Mechanics cannot equip mado when using NPC

03/12/2010
	r244 [pakpil]
	* Minor fix in LG_FORCEOFVANGUARD where should add rage with physical attacks only.

	r243 [pakpil]
	* Added LG_FORCEOFVANGUARD and LG_RAGEBURST skills.
	- Added similar funtions to those used with Monk's spirit spheres to hadle LG_FORCEOFVANGUARD since these skills have same behavior and you can get both at a time.
	* Minor fix in battle_calc_weapon_attack where hitrate calculation is done. Added missing break.

03/11/2010
	r241 [pakpil]
	* Added missing sc check in GC_POISONINGWEAPON.
	* Fixed an issue in WM_REVERBERATION where these should get 1 damage like plants.

03/10/2010
	r238 [pakpil]
	*Added missing files in r237

	r237 [pakpil]
	* Full updated to eAthena revision 14260.

	r236 [pakpil]
	* Minor update to eAthena revision 14243.

	r235 [pakpil]
	* Rewrited WL_READING_SB and WL_RELEASE improving and adjusting its behavior to the official one.
	- Should use status changes instead arrays in map_session_data.
	- Reduced MAX_SKILL_SPELLBOOK_DB to the real ammount of currently available spellbooks, 17.

03/08/2010
	r232 [pakpil]
	* Reverted where WL_READING_SB remove items, sorry was a mistake.

	r230 [pakpil]
	* Minor fix in SC_FEINTBOMB that was moving to a wrong cell in diagonal.
	* Fixed crash server in GN_WALLOFTHORN when it received damage.
	* Fixed GC_POISONINGWEAPON and WL_READING_SB that weren't removing poisons or spellbooks from inventory.

03/07/2010
	r229 [Jobbie]
	* Added NC_F_SIDESLIDE, NC_B_SIDESLIDE and NC_SHAPESHIFT.
	* Fix some item inside item_db which is not updated to latest Equippable upper-types.

	r228 [pakpil]
	* Minor fix in WL_RECOGNIZEDSPELL behavior.

	r227 [Jobbie]
	* Archbishop skills update.
	- Casting time and Cooldowns was updated based on latest info.